src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Bill_to_Contact__c</fullName>
        <formula>BillToContact.FirstName   &amp; &apos; &apos;  &amp;     BillToContact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill to Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <formula>Text( SBQQ__PaymentTerm__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order is contracted.</description>
        <inlineHelpText>Indicates if the order is contracted.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</description>
        <inlineHelpText>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ContractingMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OrderBookings__c</fullName>
        <description>Total amount of all order product bookings.</description>
        <inlineHelpText>Total amount of all order product bookings.</inlineHelpText>
        <label>Order Bookings</label>
        <summarizedField>OrderItem.SBQQ__OrderProductBookings__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaymentTerm__c</fullName>
        <description>The payment term for this order.</description>
        <inlineHelpText>The payment term for this order.</inlineHelpText>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PaymentTerm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatusMessage__c</fullName>
        <description>The price calculation status message.</description>
        <inlineHelpText>The price calculation status message</inlineHelpText>
        <label>Price Calculation Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatus__c</fullName>
        <description>The order price calculation  job status.  It is set by the system.</description>
        <inlineHelpText>Indicates the order price calculation job status.  It is set by the system.</inlineHelpText>
        <label>Price Calculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__JobStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote where the order is created from.</description>
        <inlineHelpText>The quote where the order is created from.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxAmount__c</fullName>
        <description>The estimated tax amount</description>
        <inlineHelpText>The estimated tax amount</inlineHelpText>
        <label>Estimated Tax</label>
        <summarizedField>OrderItem.SBQQ__TaxAmount__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__BillNow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__BilledAmountwithouttax__c</fullName>
        <inlineHelpText>The sum of all invoices for this order (excluding tax).</inlineHelpText>
        <label>Billed Amount (without tax)</label>
        <summarizedField>OrderItem.blng__BilledAmountwithouttax__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__BilledTax__c</fullName>
        <inlineHelpText>The sum of all taxes on invoices for this order.</inlineHelpText>
        <label>Billed Tax</label>
        <summarizedField>OrderItem.blng__BilledTax__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__BillingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Billing Account)</relationshipLabel>
        <relationshipName>BillingAccountOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingDayOfMonth__c</fullName>
        <label>Billing Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__CanceledBillings__c</fullName>
        <inlineHelpText>Total of all canceled order products.</inlineHelpText>
        <label>Canceled Billing Amount (without tax)</label>
        <summarizedField>OrderItem.blng__CanceledBillings__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceBatch__c</fullName>
        <label>Invoice Batch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceBatch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__PendingBillings__c</fullName>
        <inlineHelpText>Total pending for all order products.</inlineHelpText>
        <label>Pending Billing Amount (without tax)</label>
        <summarizedField>OrderItem.blng__PendingBillings__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TotalBilling__c</fullName>
        <formula>blng__BilledAmountwithouttax__c  +  blng__BilledTax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The sum of all invoice lines and taxes for this order.</inlineHelpText>
        <label>Total Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>ORDERS.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Meyers_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Meyers_Id__c</field>
            <operation>contains</operation>
            <value>8010Z000002A9xG</value>
        </filters>
        <label>All Orders</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__Cannot_Contract_New_Order</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), SBQQ__Contracted__c)</errorConditionFormula>
        <errorDisplayField>SBQQ__Contracted__c</errorDisplayField>
        <errorMessage>Can&apos;t contract the order. Activate the order and try again.</errorMessage>
    </validationRules>
</CustomObject>